--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "url": "https://github.com/lukearch/heic-png-converter.git"
   },
   "devDependencies": {
+    "@types/heic-convert": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
+  },
+  "dependencies": {
+    "heic-convert": "^2.1.0"
   }
 }
