--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lukearch/heic-png-converter",
+  "name": "@lukearch/heic2png",
   "version": "1.0.1",
   "description": "Convert HEIC images to PNG",
   "files": [
