--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lukearch/heic2png",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Convert HEIC images to PNG",
   "files": [
     "dist",
@@ -46,6 +46,7 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts",
     "start": "ts-node src/index.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "publish": "npm run build && npm publish"
   }
 }
