--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lukearch/heic2png",
-  "version": "2.2.1",
+  "version": "3.0.0",
   "description": "Convert HEIC images to PNG",
   "files": [
     "dist",
@@ -28,7 +28,10 @@
     "@types/commander": "^2.12.2",
     "@types/fs-extra": "^11.0.4",
     "@types/heic-convert": "^1.2.3",
+    "@types/imagemin": "^8.0.5",
+    "@types/imagemin-pngquant": "^8.0.0",
     "@types/node": "^20.11.30",
+    "@types/prompts": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint-config-prettier": "^9.1.0",
@@ -40,7 +43,10 @@
     "commander": "^12.0.0",
     "fs-extra": "^11.2.0",
     "heic-convert": "^2.1.0",
-    "picocolors": "^1.0.0"
+    "imagemin": "^8.0.1",
+    "imagemin-pngquant": "^9.0.2",
+    "picocolors": "^1.0.0",
+    "prompts": "^2.4.2"
   },
   "scripts": {
     "build": "tsc",
