--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts",
     "start": "ts-node src/index.ts",
-    "format": "prettier --write .",
-    "publish": "npm run build && npm publish"
+    "format": "prettier --write ."
   }
 }
